--- a/Frontend/LoginRegisterExample/app/build.gradle
+++ b/Frontend/LoginRegisterExample/app/build.gradle
@@ -29,11 +29,12 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:28.0.0'
+//    implementation 'com.android.support:design:27.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
