--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,8 +29,8 @@ spring.devtools.restart.additional-paths=.
 #jwt
 #lifecycle(min)
 logging.level.com.ssafy =trace
-#jwt.expmin = 30
-#jwt.salt = THISISMYSALTTHISISMYSALTTHISISMYSALT
+jwt.expmin = 30
+jwt.salt = THISISMYSALTTHISISMYSALTTHISISMYSALT
 #
 #spring.devtools.restart.enabled = false
 
