--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port=8080
 # DB
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ssafitness_db?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/PLAYWITHME?serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ssafitness_db?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=ssafy
 #spring.datasource.password=1q2w3e4r
 #1q2w3e4r
 
@@ -17,10 +17,11 @@ spring.datasource.password=1234
 #mybatis.config-location==classpath:config/SqlMapConfig.xml
 
 # mybatis 
-# mybatis mapping type short
-mybatis.type-aliases-package=com.ssafy.vo
+#mapper location settings
+mybatis.type-aliases-package=com.ssafy.play.model
 # mybatis log
-mybatis.mapper-locations=mapper/*Mapper.xml
+
+mybatis.mapper-locations=classpath*:/mappers/**/*.xml
 logging.level.com.ssafy.mapper=trace
 
 #server restart
