--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # DB
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/PLAYWITHME?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/playwithme?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ssafitness_db?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 
 spring.datasource.username=root
