--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/playwithme?autoReconnect=true&
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ssafitness_db?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=ssafy
 #spring.datasource.password=1q2w3e4r
 #1q2w3e4r
 
