--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,6 +16,15 @@ spring.datasource.password=ssafy
 #mybatis
 #mybatis.config-location==classpath:config/SqlMapConfig.xml
 
+#email
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.username=ru940203@naver.com
+spring.mail.password=Wogus940203
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+
 # mybatis 
 #mapper location settings
 mybatis.type-aliases-package=com.ssafy.play.model
