--- a/Frontend/LoginRegisterExample/app/build.gradle
+++ b/Frontend/LoginRegisterExample/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 }
