--- a/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignupActivity"/>
-    </application>
+        <activity android:name=".Register.SignupActivity"/>
 
+
+    </application>
+    <!--  인터넷 권한 부여-->
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
