--- a/Frontend/LoginRegisterExample/app/build.gradle
+++ b/Frontend/LoginRegisterExample/app/build.gradle
@@ -42,3 +42,14 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == "androidx.appcompat") {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion "1.+"
+            }
+        }
+    }
+}
