--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\multicampus\Downloads\Marvel.ico,0
+IconResource=C:\Users\multicampus\Downloads\football-08_icon-icons.com_75134.ico,0
 [ViewState]
 Mode=
 Vid=
