--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port=8399
 # DB
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/playwithme?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://k3a304.p.ssafy.io:3306/playwithme?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ssafitness_db?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 
 spring.datasource.username=root
-spring.datasource.password=ssafy
+spring.datasource.password=1q2w3e4r!
 #spring.datasource.password=1q2w3e4r
 #1q2w3e4r
 
