--- a/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
@@ -15,14 +15,20 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.LoginRegisterExample">
         <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".SignupActivity"/>
-        <activity android:name=".SubwayActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".Register.RegisterActivity"/>
+        <activity android:name=".SubwayActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <!-- 팝업 Activity -->
         <activity android:name=".PopupActivity" android:theme="@android:style/Theme.Holo.Dialog" />
