--- a/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LogIn.LoginActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
 
         <activity android:name=".Register.RegisterActivity"/>
         <activity android:name=".SubwayActivity">
