--- a/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category1.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".viewpager.CategoryListActivity">
