--- a/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
         </activity>
-
+        <activity android:name=".Playwithme.PlaywithmeLikelyActivity"/>
         <activity android:name=".Register.RegisterActivity"/>
         <activity android:name=".SubwayActivity">
 <!--            <intent-filter>-->
