--- a/Frontend/LoginRegisterExample/app/build.gradle
+++ b/Frontend/LoginRegisterExample/app/build.gradle
@@ -30,6 +30,10 @@ android {
 
 dependencies {
 
+    // url img
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 //    implementation 'com.android.support:design:27.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
